<resources>
    <string name="app_name">Ayah-MidTerm-1,2022</string>
    <string name="action_settings">Settings</string>
    <string name="description">puppy image</string>
    <string name="txtTitle">You are in Activity 1</string>
    <string name="btnAct2">Act2</string>
    <string name="btnAct3">Act3</string>
    <string name="txtTitle2">You are in Activity 2</string>
    <string name="btn">Go to Main Activity</string>


</resources>